app/assets/styles/reset.css
/* #region / Variables */
/*   _____                _   
/*  |  __ \              | |  
/*  | |__) |___  ___  ___| |_ 
/*  |  _  // _ \/ __|/ _ \ __|
/*  | | \ \  __/\__ \  __/ |_ 
/*  |_|  \_\___||___/\___|\__|
/*                            
/*                             */
/* -----------------------------------------------
  Reset
-------------------------------------------------*/
*, *::before, *::after {
  box-sizing: border-box;
}

html, body {
  overflow: unset !important;
  height: 100%;
}

body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}

img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}

input, button, textarea, select {
  font: inherit;
}

p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

#root, #__next {
  isolation: isolate;
}

/* #endregion */

